# json-formula-py

./: CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
src/json_formula/: __init__.py  _errors.py  api.py  data_types.py  exceptions.py  functions.py  interpreter.py  lexer.py  match_type.py  object_model.py  parser.py  runtime.py  tokens.py  utils.py
src/json_formula/_vendor/json_formula_js/: json-formula.js  worker.mjs
tests/: conftest.py  test_official_suite.py
