[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "json-formula"
version = "0.1.0"
description = "A native Python implementation of the Adobe JSON Formula specification."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "OpenAI Codex"},
]
keywords = ["json", "formula", "expression", "query-language", "spreadsheet"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "wheel>=0.46",
]

[project.urls]
Homepage = "https://opensource.adobe.com/json-formula/"
Specification = "https://opensource.adobe.com/json-formula/"
Reference-Implementation = "https://github.com/adobe/json-formula/"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
json_formula = [
  "_vendor/json_formula_js/*.js",
  "_vendor/json_formula_js/*.mjs",
  "_vendor/json_formula_js/*.json",
  "_vendor/json_formula_js/tutorial/*.js",
]
